Fixed user menu alignment on mobile.

--- a/assets/less/classes/header.less
+++ b/assets/less/classes/header.less
@@ -185,6 +185,10 @@
         order: 3;
         align-items: center;
 
+        @media (max-width: @site-mobile-width) {
+            justify-content: flex-end;
+        }
+
         &-toggle {
             display: none;
         }
